--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kirz/expo-content-blocker",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Apply content blocker rules to Safari",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -14,7 +14,7 @@
     "expo-module": "expo-module",
     "open:ios": "xed example/ios",
     "open:android": "open -a \"Android Studio\" example/android",
-    "release": "npm run build && npm publish --access public"
+    "release": "npm publish --access public"
   },
   "keywords": [
     "react-native",
