--- a/plugin/src/serviceExtensionFiles/ContentBlocker-Info.plist
+++ b/plugin/src/serviceExtensionFiles/ContentBlocker-Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>{{BUNDLE_SHORT_VERSION}}</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>{{BUNDLE_VERSION}}</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
