--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,9 +1,9 @@
 {
   "platforms": ["ios"],
   "ios": {
-    "modules": ["ContentBlockerModule"]
+    "modules": ["ExpoContentBlockerModule"]
   },
   "android": {
-    "modules": ["expo.modules.blocker.ContentBlockerModule"]
+    "modules": ["expo.modules.blocker.ExpoContentBlockerModule"]
   }
 }
