--- a/plugin/src/serviceExtensionFiles/SafariAdsBlocker-Info.plist
+++ b/plugin/src/serviceExtensionFiles/SafariAdsBlocker-Info.plist
@@ -5,7 +5,7 @@
 <key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>ContentBlocker</string>
+	<string>SafariAdsBlocker</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
